fix(style): fix photo size & alignment

--- a/src/pages/more/more.scss
+++ b/src/pages/more/more.scss
@@ -3,12 +3,13 @@ page-more {
         background-color: color($colors, primary);
         height: 90px;
         text-align: left;
-      
+        padding-top: 5px;
+
         img {
           border-radius: 50%;
           border: 2px solid map-get($colors, light);
-          width: 55px;
-          height: 69px;
+          width: 50px;
+          height: 60px;
         }
     }
 
